# mai_os_labs

./: CMakeLists.txt
cp/: CMakeLists.txt  a.c  b.c  c.c
cp/doc/: report_cp.docx
lab1/doc/: report_1.docx
lab2/: CMakeLists.txt  test.txt
lab2/doc/: report_2.docx
lab2/include/: parent.h
lab2/src/: child.c  parent.c
lab3/: CMakeLists.txt  main.c
lab3/doc/: report_3.docx
lab3/include/: lab3.h
lab3/src/: lab3.c
lab4/: CMakeLists.txt  main.c  test.txt
lab4/doc/: report_4.docx
lab4/src/: child  child.c  main  parent.c
lab5/: CMakeLists.txt  main_dynamic.c  main_static.c
lab5/doc/: report_5.docx
lab5/include/: func.h
lab5/src/: lib1.c  lib2.c
lab678/: CMakeLists.txt  client.cpp  server.cpp
lab678/doc/: report_678.docx
lab678/include/: topology.h  zmqf.h
lab678/src/: topology.cpp  zmqf.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test.cpp
